Use display:table to ensure that the SIT form doesn't overlap with SIT items that already exist within the SIT panel.

--- a/src/shared/StorageInTransit/StorageInTransit.css
+++ b/src/shared/StorageInTransit/StorageInTransit.css
@@ -53,3 +53,13 @@
   padding-top: 0.5em;
 
 }
+
+.storage-in-transit {
+  display: table-row;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
+.storage-in-transit-panel .basic-panel-content {
+  display: table;
+}
